--- a/svg.html
+++ b/svg.html
@@ -14,8 +14,18 @@
         rel="stylesheet">
     <title>Homework HTML+CSS of Yusupow E.</title>
 </head>
+
 <body>
-    <svg width="20" height="20">
-        <use href="./img/sprite.svg#facebook"></use>
-    </svg>
+<h1>Move the mouse over the square</h1>
+
+<div class="box">
+    <div class="overlay">
+        <p>This content is hidden through transformation and only appears when hovering over <code>div.box</code></p>
+    </div>
+</div>
+<div class="box box1">
+    <div class="overlay overlay1">
+        <p>This content is hidden through transformation and only appears when hovering over <code>div.box</code></p>
+    </div>
+</div>
 </body>
